[gd_scene load_steps=4 format=3 uid="uid://dh0kc5ysas7xu"]

[ext_resource type="Script" uid="uid://dd4r1r2hvvp4d" path="res://ui/ui.gd" id="1_nb4k0"]
[ext_resource type="Script" uid="uid://c4ms86uokerem" path="res://ui/hud.gd" id="2_ks8t7"]
[ext_resource type="Theme" uid="uid://bunuwhfnqwadq" path="res://ui/default_theme.tres" id="3_wl5ax"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ks8t7")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 14.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="ScoreText" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 15
text = "Score: "

[node name="ScoreLabel" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 15
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Message" type="Label" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Test"

[node name="MessageTimer" type="Timer" parent="HUD/MarginContainer"]
wait_time = 3.0

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -73.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Start Game"

[node name="HowToPlayButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "How To Play"

[node name="OptionsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="ExitGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit Game"

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -98.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume Game"

[node name="NewGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "New Game"

[node name="OptionsButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="ExitGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit Game"

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -23.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/MarginContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="OptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Back To Menu"

[node name="HowToPlayMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="HowToPlayMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -75.5
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlayMenu/MarginContainer"]
layout_mode = 2

[node name="HowToPlayLabel" type="Label" parent="HowToPlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "W/Up Arrow - Move Up
S/Down Arrow - Move Down
A/Left Arrow - Move Left
D/Right Arrow - Move Right"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="HowToPlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Back To Main Menu"

[node name="GameFinishedScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="GameFinishedScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -73.0
offset_right = 108.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="GameFinishedScreen/MarginContainer"]
layout_mode = 2

[node name="LevelFinishedText" type="Label" parent="GameFinishedScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Finished!"

[node name="HBoxContainer" type="HBoxContainer" parent="GameFinishedScreen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreText" type="Label" parent="GameFinishedScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score: "

[node name="ScoreLabel" type="Label" parent="GameFinishedScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="ReturnMainMenuButton" type="Button" parent="GameFinishedScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return To Main Menu"
